# api/controller/activities.py
@@ -1,33 +1,33 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
-import json
+import typing
 
 from api.controller import check_sources_by_id
 from db import insert_or_ignore, insert_or_update
 from db.models.activities import Data, Source, Tag, Type, TagSet
 from flask import redirect
-from flask_modules.celery import celery
 from flask_modules.database import db
-from flask_modules.redis import redis_store
 from flask_security import current_user
 from sqlalchemy.sql import func
 
 from . import defaults
 
-generic_parser = lambda data: dict(
-    message=data.text.text or "{in progress}",
-    source=dict(id=data.source.id,
-                type=data.source.type.value,
-                uri=data.source.uri,
-                slug=data.source.slug),
-    tags=[tag.tag for tag in data.tags],
-    created_time=data.time.time.isoformat(),
-    meta=dict(
-        fingerprint=data.fingerprint.fingerprint,
-        language=data.language.language.name
-    )
-)
-parsers = {
+
+def generic_parser(data: Data) -> dict:
+    return dict(
+        text=data.text.text if data.text else "",
+        source=dict(id=data.source.id,
+                    type=data.source.type.value,
+                    uri=data.source.uri,
+                    slug=data.source.slug),
+        tags=[tag.tag for tag in data.tags],
+        created_time=data.time.time.isoformat() if data.time else '1970-01-01T00:00:00+00:00',
+        language=data.language.language.name if data.language else 'un',
+        prediction=dict((data.prediction.model.tags.filter_by(id=k).one().tag, v) for k, v in
+                        data.prediction.prediction) if data.prediction else dict())
+
+
+_parsers = {
     Type.facebook: lambda data: dict(
         id=data.data['id'],
         user=data.data.get('from'),
@@ -43,35 +43,13 @@ parsers = {
 }
 
 
-def _get_suggestions(activity: dict, model_id: str) -> dict:
-    # todo model id is hard coded
-    if not activity['extra']['fingerprint']:
-        return dict()
-    async_result = celery.send_task('worker.brain.predict', args=(activity['message'],),
-                                    kwargs=dict(fingerprint=activity['meta']['fingerprint'],
-                                                created_time=activity['created_time'],
-                                                model_id='32797cd2-4203-11e6-9215-f45c89bc662f'))
-    return dict((k, v) for [v, k] in async_result.get())
-
-
-def _get_by_id(source_id: int, activity_id: str) -> Data:
-    # return current_user.sources.filter_by(id=source_id).data.filter_by(object_id=activity_id).one_or_none()
-    return db.session.query(Data).filter(
-        Data.source_id.in_({src.id for src in current_user.sources}) &
-        (Data.source_id == source_id) &
-        (Data.object_id == activity_id)).one_or_none()
-
-
-def _to_key(source_id: int, activity_id: str):
-    return "%d:%s" % (source_id, activity_id)
+def parser(data: Data) -> dict:
+    return _parsers[data.source.type](data)
 
 
 @defaults
-def source_ids_get(source_ids: list = None,
-                   count: int = None,
-                   max_id: str = None,
-                   random: bool = False,
-                   with_suggestion: bool = None) -> dict:
+def source_ids_get(source_ids: list = None, count: int = None, max_id: str = None, random: bool = False) -> \
+        typing.Union[dict, tuple]:
     error = check_sources_by_id(set(source_ids))
     if error:
         return error
@@ -85,75 +63,38 @@ def source_ids_get(source_ids: list = None,
 
     if max_id:
         data_query = data_query.filter(Data.object_id < max_id)
+
     data_query = data_query.limit(count).all()
 
-    data = dict((data.id, parsers[data.source.type](data)) for data in data_query)
-    # if with_suggestion:
-    #     suggestions = group([celery.signature('worker.brain.predict',
-    #                                           args=(activity['message'],),
-    #                                           kwargs=dict(fingerprint=activity['fingerprint'],
-    #                                                       created_time=activity['created_time'],
-    #                                                       model_id='32797cd2-4203-11e6-9215-f45c89bc662f',
-    #                                                       key_by=activity['id']))
-    #                          for activity in data.values()
-    #                          if activity['fingerprint'] is not None]).apply_async()
-    #     for suggestion in suggestions.get():
-    #         data[suggestion['key']]['suggestion'] = dict((k, v) for [v, k] in suggestion['prediction'])
-    data = data.values()
-    for datum in data:
-        redis_store.setex(_to_key(datum['source']['id'], datum['id']), 30, json.dumps(datum).encode('utf-8'))
-        del datum['meta']
-
+    data = [parser(data) for data in data_query]
     return dict(activities=list(data))
 
 
 @defaults
-def source_id_activity_id_field_id_get(source_id: int, activity_id: str, field_id: str, no_cache=False) -> dict:
-    activity = source_id_activity_id_get(source_id, activity_id, with_suggestion=field_id == 'suggestion',
-                                         no_cache=no_cache)
+def source_id_activity_id_get(source_id: int, activity_id: str, _internal=False) -> typing.Union[dict, tuple, Data]:
+    data = current_user.data.filter_by(source_id=source_id, object_id=activity_id).one_or_none()
+    if not data:
+        return dict(error='No activity found for user and %d -> %s' % (source_id, activity_id)), 404
+    return parser(data) if not _internal else data
+
+
+@defaults
+def source_id_activity_id_field_id_get(source_id: int, activity_id: str, field_id: str) -> typing.Union[dict, tuple]:
+    activity = source_id_activity_id_get(source_id, activity_id)
     if isinstance(activity, tuple):  # error
         return activity
-    result = dict(id=activity_id)
-    result[field_id] = activity.get(field_id, None)
-    return result
+    return {'id': activity_id, field_id: activity.get(field_id, None)}
 
 
 @defaults
-def source_id_activity_id_get(source_id: int, activity_id: str, no_cache=False, with_suggestion=False) -> dict:
-    cached = redis_store.get(_to_key(source_id, activity_id))
-    if not cached or no_cache:
-        data = _get_by_id(source_id, activity_id)
-        if data is None:
-            return dict(error='No activity for this id found'), 404
-
-        activity = parsers[data.source.type](data)
-        if with_suggestion:
-            activity['suggestion'] = _get_suggestions(activity, '')
-        elif cached:
-            cached = json.loads(cached.decode('utf-8'))
-            # protect from cache deletion
-            activity['suggestion'] = cached.get('suggestion')
-    else:
-        activity = json.loads(cached.decode('utf-8'))
-        if with_suggestion and activity.get('suggestion') is None:
-            activity['suggestion'] = _get_suggestions(activity, '')
-    redis_store.setex(_to_key(source_id, activity_id), 30, json.dumps(activity).encode('utf-8'))
-    del cached  # only use activity from here on out
-
-    error = check_sources_by_id({activity['source']['id']})
-    if error:
-        return error
-    del activity['meta']
-    return activity
-
-
-@defaults
-def source_id_activity_id_tags_patch(source_id: int, activity_id: str, body: dict) -> dict:
+def source_id_activity_id_tags_patch(source_id: int, activity_id: str, body: dict) -> typing.Union[dict, tuple]:
     remove = set(body.get('remove', []))
     add = set(body.get('add', []))
-    data = _get_by_id(source_id, activity_id)
+    data = source_id_activity_id_get(source_id, activity_id, _internal=True)
     if data is None:
         return dict(error='No activity for this id found'), 404
+    elif isinstance(data, tuple):  # error
+        return data
 
     for add_tag in add.union(remove):  # make sure all tags are in DB
         tags_tag_put(add_tag, commit=False)
@@ -163,12 +104,15 @@ def source_id_activity_id_tags_patch(source_id: int, activity_id: str, body: dic
     remove and data.tags.difference_update(
         db.session.query(Tag).filter(Tag.tag.in_(remove)).filter_by(user_id=current_user.id))
     db.session.commit()
-    return source_id_activity_id_field_id_get(source_id, activity_id, 'tags', no_cache=True)
+    return source_id_activity_id_field_id_get(source_id, activity_id, 'tags')
 
 
 @defaults
-def source_id_activity_id_put(source_id: int, activity_id: str, activity_import: dict, commit=True) -> dict:
-    if ('source_id' in activity_import and source_id != activity_import['source_id'] or
+def source_id_activity_id_put(source_id: int,
+                              activity_id: str,
+                              activity_import: dict,
+                              commit=True) -> typing.Union[dict, tuple]:
+    if ('source_id' in activity_import and source_id != activity_import['source_id']) or (
                     'id' in activity_import and activity_id != activity_import['id']):
         db.session.rollback()
         return dict(error="source_id does not match activity"), 400
@@ -187,24 +131,22 @@ def source_id_activity_id_put(source_id: int, activity_id: str, activity_import:
 
 
 @defaults
-def source_id_activity_id_delete(source_id: int, activity_id: str, commit=True) -> dict:
+def source_id_activity_id_delete(source_id: int, activity_id: str, commit=True) -> typing.Union[dict, tuple]:
+    # directly deleting from current_user relationship has a glitch :(
     err = check_sources_by_id({source_id})
     if err:
-        db.session.rollback()
         return err
     db.session.query(Data).filter_by(source_id=source_id, object_id=activity_id).delete()
     commit and db.session.commit()
-    redis_store.delete(_to_key(source_id, activity_id))
 
 
 @defaults
-def root_post(import_activities: dict) -> dict:
+def root_post(import_activities: dict) -> typing.Union[dict, tuple]:
     ids = set()
     for activity in import_activities['activities']:
         if 'id' not in activity:
             activity['id'] = hash(activity['data'])
         if 'source_id' not in activity:
-            db.session.rollback()
             return dict(error='no source_id found for ' + activity['id']), 400
         ids.add((activity['source_id'], activity['id']))
         err = source_id_activity_id_put(activity['source_id'], activity['id'], activity, False)
@@ -225,7 +167,7 @@ def sources_get() -> dict:
 
 
 @defaults
-def sources_post(source: dict):
+def sources_post(source: dict) -> typing.Union[dict, tuple]:
     if 'id' in source:
         return dict(error='id not allowed, will be assigned'), 400
 
@@ -238,7 +180,7 @@ def sources_post(source: dict):
 
 
 @defaults
-def sources_source_id_get(source_id: int) -> dict:
+def sources_source_id_get(source_id: int) -> typing.Union[dict, tuple]:
     source = current_user.sources.filter_by(id=source_id).one_or_none()
     return dict(id=source.id,
                 type=source.type.value,
@@ -247,7 +189,7 @@ def sources_source_id_get(source_id: int) -> dict:
 
 
 @defaults
-def sources_source_id_patch(source_id: int, source: dict) -> dict:
+def sources_source_id_patch(source_id: int, source: dict) -> typing.Union[dict, tuple]:
     user_source = current_user.sources.filter_by(id=source_id).one_or_none()
     if user_source is None:
         return dict(error="source does not exist"), 404
@@ -277,7 +219,7 @@ def tags_get(with_count: bool = False) -> dict:
 
 
 @defaults
-def source_ids_tags_get(source_ids: list, with_count: bool = True) -> dict:
+def source_ids_tags_get(source_ids: list, with_count: bool = True) -> typing.Union[dict, tuple]:
     error = check_sources_by_id(set(source_ids))
     if error:
         return error
@@ -289,12 +231,12 @@ def source_ids_tags_get(source_ids: list, with_count: bool = True) -> dict:
                           if c > 0)
     tags['tags'] = list(tags['counts'].keys())
     if not with_count:
-        del(tags['counts'])
+        del (tags['counts'])
     return tags
 
 
 @defaults
-def tags_tag_get(tag: str, with_count: bool = False) -> dict:
+def tags_tag_get(tag: str, with_count: bool = False) -> typing.Union[dict, tuple]:
     the_tag = db.session.query(Tag).filter_by(user_id=current_user.id, tag=tag).one_or_none()
     if the_tag is None:
         return dict(error="Tag not found"), 404
@@ -337,7 +279,7 @@ def tagsets_post(tagset: dict):
 
 
 @defaults
-def tagsets_tagset_id_get(tagset_id: int) -> dict:
+def tagsets_tagset_id_get(tagset_id: int) -> typing.Union[dict, tuple]:
     tagset = current_user.tagsets.filter_by(id=tagset_id).one_or_none()
     return dict(id=tagset.id,
                 title=tagset.title,
@@ -345,7 +287,7 @@ def tagsets_tagset_id_get(tagset_id: int) -> dict:
 
 
 @defaults
-def tagsets_tagset_id_patch(tagset_id: int, tagset: dict) -> dict:
+def tagsets_tagset_id_patch(tagset_id: int, tagset: dict) -> typing.Union[dict, tuple]:
     user_tagset = current_user.tagsets.filter_by(id=tagset_id).one_or_none()
     if user_tagset is None:
         return dict(error="tagset does not exist"), 404
@@ -368,7 +310,7 @@ def tagsets_tagset_id_delete(tagset_id: int) -> dict:
 
 
 @defaults
-def tagsets_tagset_id_tag_delete(tagset_id: int, tag: str) -> dict:
+def tagsets_tagset_id_tag_delete(tagset_id: int, tag: str) -> typing.Union[dict, tuple]:
     tagset = current_user.tagsets.filter_by(id=tagset_id).one_or_none()
     if tagset is None:
         return dict(error="tagset does not exist"), 404
@@ -377,7 +319,7 @@ def tagsets_tagset_id_tag_delete(tagset_id: int, tag: str) -> dict:
 
 
 @defaults
-def tagsets_tagset_id_tag_put(tagset_id: int, tag: str) -> dict:
+def tagsets_tagset_id_tag_put(tagset_id: int, tag: str) -> typing.Union[dict, tuple]:
     tagset = current_user.tagsets.filter_by(id=tagset_id).one_or_none()
     if tagset is None:
         return dict(error="tagset does not exist"), 404
